update changelog with last bugfix for 0.3
git-svn-id: http://svn.sccs.swarthmore.edu/dtk/trunk@427 f7ac0389-ae0c-0410-a9db-e7a4810fae10

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,3 +9,4 @@
 * Bugfix: drawables no longer improperly clipped at edges
 * Bugfix: don't process events for an inputcontext which is done processing (after a modal dialog is hidden)
 * Bugfix: support for clearing Dialog in core
+* Bugfix: clearing a drawable no longer sometimes leaves dots
