* removed one last reference to context * updated ChangeLog
git-svn-id: http://svn.sccs.swarthmore.edu/dtk/trunk@442 f7ac0389-ae0c-0410-a9db-e7a4810fae10

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 0.4 (unreleased)
 ----------------
+
+* Renamed Rows -> RowLayout, Columns -> ColumnLayout
+* Removed InputContext and Dialog
+* Fixed a bug in test cases in Python 2.5
+* Bugfix: clear() wasn't actually clearing anything
 	
 0.3 (2008-04-23)
 ----------------
